# internal/transfer/controller/dto.go
@@ -1,0 +1,7 @@
+package controller
+
+type TransferMoneyRequest struct {
+	FromAccountId string
+	ToAccountId   string
+	Amount        float64
+}
